tests/pos/todo/objects/10-object.ts
/*@ foo:: (o: { @Final x: number; }) => { @Final x: number + boolean } */
export function foo(o) {
    return o;
}
